[package]
name = "psobench"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
rand = "0.8"
nalgebra = { version = "0.29", features = ["serde"]}
indicatif = "0.17.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
lazy_static = "1.4.0"
chrono = "0.4"